--- a/src/scss/data/_sponsor.scss
+++ b/src/scss/data/_sponsor.scss
@@ -17,7 +17,7 @@ Styleguide Data.Sponsor
 Name
 
 Markup:
-Circus World
+LogoIpsum
  
 Weight:-100
  
@@ -83,7 +83,7 @@ Markup:
 MarkupWrapperClasses: max-w_40
 
 
-Weight:0
+Weight:10
  
 Styleguide Data.Sponsor.Logo
 */
@@ -95,7 +95,7 @@ Styleguide Data.Sponsor.Logo
 Web Address
 
 Markup:
-http://wwww.CircusWorld1232.com
+http://wwww.LogoIpsum.com
  
 Weight:25
  
@@ -111,4 +111,23 @@ Markup:
 Weight:26
  
 Styleguide Data.Sponsor.WebLink
+*/
+
+/*
+Description
+ 
+Description: Short html description of the sponsor or the product.
+ 
+Markup:
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, consequuntur similique quibusdam deleniti fuga, ad laudantium vel assumenda incidunt impedit iure molestias! Et laboriosam nulla ut at officia ipsa quaerat?</p>
+<ul>
+    <li>Ut reiciendis et possimus rerum animi.</li>
+<li>Reprehenderit quia et eaque cupiditate illo explicabo architecto.</li>
+<li>Et cumque distinctio maxime maiores aut labore ut est esse.</li>
+</ul>
+<p>Et quia saepe corporis explicabo consectetur voluptatem iure. Quos nostrum autem. Et omnis nostrum eius autem aut voluptas illum. Et autem velit facere explicabo reiciendis voluptas. Ipsum vel et nisi in iste molestias sit. Eos et aut est ullam.</p>
+ 
+Weight:3
+ 
+Styleguide Data.Sponsor.Description
 */
