--- a/michelangelo/kss_styleguide/base-template/index.hbs
+++ b/michelangelo/kss_styleguide/base-template/index.hbs
@@ -16,7 +16,7 @@
     <link href="kss-assets/css/kss.css" rel="stylesheet">
     {{{ styles }}}
 </head>
-<body class="kss-body texture_light font_ui bg_black-2">
+<body class="kss-body  bg_texture-dark font_ui bg_black-2">
     <!-- header. -->
     <header class="bg_white shadow_overlap-light br_black-1 br_solid br_1 sticky t_0 display_none:md flex flex_inline z_5">
         <h1 class="self_center m_3">
@@ -35,7 +35,7 @@
             <a class="undecorated h:undecorated c_primary" href="./index.html">{{ options.title }}</a>
         </h1>
     </header>
-    <section class="display_none block:md">
+    <section id="HeaderNav" class="display_none block:md m_auto bg_white shadow_bevel-bold">
         <aside class="m_auto font_copy display_none block:md sticky t_0">
             <ul class="ul_none flex flex_row:md flex_column justify_center br-t_1 br_solid br_black-4 p-y_3 br-b_1 ">
 
@@ -54,7 +54,7 @@
             </ul>
         </aside>
     </section>
-    <section id="MobleNav" class="bg_secondary-n3 display_none:lg font_0 font_ui kss-navigation overflow_auto p-b_2 p-x_3 scrollbar-mini shadow_overlap-bold z_4" style="padding-top:70px">
+    <section id="MobleNav" class="bg_secondary-n3 bg_white display_none:lg font_0 font_ui kss-navigation overflow_auto p-b_2 p-x_3 scrollbar-mini shadow_overlap-bold z_4" style="padding-top:70px">
         <aside class="display_none:md flex flex_column-reverse">
             <ul class="block flex flex_column ul_none w_100 ul_none lh_3" id="sitenav">
                 {{#each options.site_nav }}
@@ -100,7 +100,7 @@
             </ul>
         </aside>
     </section>
-    <div class="m_auto p-x_4 ">
+    <div class="m_auto p-x_4">
         {{#if homepage}}
             <article class="kss-markdown reading-typography font-size_up p_4 p-t_2 flex_auto max-w_90 m_auto">
                 {{{ homepage }}}
@@ -108,8 +108,8 @@
             {{ else }}
             <!-- display each section, in order. the "root" element comes first in this loop, and can be detected using the "#if @first" block as seen below. -->
             <div class="flex flex_column flex_row:md gap-x_5 p-t_4 max-w_90 m_auto">
-                <section class="max-w_15 w_20:lg flex_none relative display_none block:md">
-                    <aside class="sticky t_0">
+                <section class="max-w_20 w_25:lg flex_none relative display_none block:md">
+                    <aside class="sticky t_0 br_round shadow_bevel-bold bg_white p_4">
                         <div>
                             {{#each menu}}
                                 {{#if isActive}}
@@ -127,7 +127,7 @@
                                     {{/if}}
                                 {{/if}}
                             {{/each}}
-                            <div class=" font_bold ">
+                            <div class=" font_bold br-t_1 br_primary br_solid font_bold m-t_3 p-t_3">
                                 <a class="block inline-block:md undecorated flex flex_row h:undecorated flex_nowrap" href="#topbody">
                                     <i class="fas fa-arrow-up"></i><span class="flex_auto overflow_ellipsis">Top</span>
                                 </a>
@@ -138,11 +138,11 @@
                 <main class="w_100 flex_auto">
                     {{#each sections}}
                         {{#if @first}}
-                            <header class="bg_white kss-section kss-section--depth-{{ depth }} br_radius shadow_overlap-light br_radius" id="kssref-{{ referenceURI }}">
-                                {{ else }}
-                                <section class="kss-section bg_white kss-section--depth-{{ depth }} br_radius shadow_2" id="kssref-{{ referenceURI }}">
+                            <header class="kss-section kss-section--depth-{{ depth }} br_radius shadow_bevel-bold bg_white br_solid br_black-4 br_1" id="kssref-{{ referenceURI }}">
+                            {{ else }}
+                            <section class="kss-section kss-section--depth-{{ depth }} br_radius shadow_bevel-light bg_white br_solid br_black-4 br_1" id="kssref-{{ referenceURI }}">
                         {{/if}}
-                        <article class="kss-section__content relative">
+                        <article class="kss-section__content relative br_radius">
                             <div class="absolute t_0 r_4 flex flex_row gap-x_2 justify_end">
                                 {{#if deprecated}}
                                     <div class="inline-block flex_none p_2 bg_alert shadow_overlap-light">
