Corrections to Templates

--- a/src/scss/structures/_template.scss
+++ b/src/scss/structures/_template.scss
@@ -119,7 +119,7 @@ Description: The logged in buttons.
 Markup:
 <div class="absolute b_4 r_4 l_4 b_auto:lg t_4:lg r_4:lg r_4:md l_auto:md b_4:md t_4:md">
     <div class="bg_black-3 br_1 br_black-4 br_radius br_solid:lg br_none font_medium font_ui gap-x_3 inline-block inline-flex justify_end">
-        <span class="font_accent self_center vertical-align_middle display_none inline:md p-x_3 c_white">User Name</span>
+        <span class="font_accent self_center vertical-align_middle overflow_hidden p-x_3 c_white">User Name</span>
         <a class="btn m-y_n1 m-r_n1 br-tl_square br-bl_square bg_accent-n1 h:bg_accent-n3 br_solid br_black-4 br_1 c_white-8  h:c_white uppercase shadow_overlap-light font_ui font_bold" href="#"><i class="fas fa-sign-out p-l_2"></i></a>
     </div>
 </div> 
@@ -163,12 +163,7 @@ Markup:
 	/>
 </div>
 <div class="relative m-t_4  overflow-hidden"  style="width:600px">
-<div class="absolute r_4 l_auto b_4 t_auto justify_center flex flex_column gap-x_4 gap-y_4">
-     <div class="bg_secondary-2 br_1 br_black-3 br_radius br_solid:lg br_none c_white font_medium font_ui gap-x_3 inline-block inline-flex justify_end m-x_2 p_2:lg p_0 relative shadow_overlap-light">
-         <span class="font_bold font_ui self_center vertical-align_middle display_none inline:md p-x_3">User Name</span>
-         <a class="btn bg_accent-n1 h:bg_accent-n3 br_solid br_black-2 br_1 c_white  h:c_white uppercase shadow_overlap-light font_ui font_bold" href="#">Log Out <i class="fas fa-sign-out p-l_2"></i></a>
-     </div>
- </div>
+ {{> "Template.BrandArea.Buttons.LoggedIn"}}
 <div class="absolute b_0 bg_highlight font_5 font_xbold grid justify_center opacity_5 r_0 self_center l_0 text_center" style="height:100px"><span class="self_center c_black font-blend_color-burn">UNSAFE</span></div>
 	<img
 		class="w_100"
@@ -176,12 +171,7 @@ Markup:
 	/>
 </div>
 <div class="relative m-t_4  overflow-hidden" style="width:400px">
-<div class="absolute b_4 r_4 l_4 justify_center flex flex_row flex_column gap-x_4 gap-y_4">
-     <div class="bg_secondary-2 br_1 br_black-3 br_radius br_solid:lg br_none c_white font_medium font_ui gap-x_3 inline-block inline-flex justify_end m-x_2 p_2:lg p_0 relative shadow_overlap-light">
-         <span class="font_bold font_ui self_center vertical-align_middle display_none inline:md p-x_3">User Name</span>
-         <a class="btn bg_accent-n1 h:bg_accent-n3 br_solid br_black-2 br_1 c_white  h:c_white uppercase shadow_overlap-light font_ui font_bold" href="#">Log Out <i class="fas fa-sign-out p-l_2"></i></a>
-     </div>
- </div>
+ {{> "Template.BrandArea.Buttons.LoggedIn"}}
 <div class="absolute b_0 bg_highlight font_5 font_xbold grid justify_center opacity_5 r_0 self_center l_0 text_center" style="height:100px"><span class="self_center c_black font-blend_color-burn">UNSAFE</span></div>
 	<img
 		class="w_100"
