--- a/michelangelo/kss_styleguide/base-template/index.hbs
+++ b/michelangelo/kss_styleguide/base-template/index.hbs
@@ -16,7 +16,7 @@
     <link href="kss-assets/css/kss.css" rel="stylesheet">
     {{{ styles }}}
 </head>
-<body class="kss-body  bg_texture-dark font_ui bg_black-2">
+<body class="kss-body  bg_texture-light font_ui bg_black-2">
     <!-- header. -->
     <header class="bg_white shadow_overlap-light br_black-1 br_solid br_1 sticky t_0 display_none:md flex flex_inline z_5">
         <h1 class="self_center m_3">
@@ -281,6 +281,7 @@
         <!-- scripts. -->
         <script src="kss-assets/vendor/jquery.js"></script>
         <script src="kss-assets/vendor/prism.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="kss-assets/js/kss.js"></script>
         <script>
             var CopyCode = function ($id) {
