--- a/michelangelo/kss_styleguide/base-template/kss-assets/css/kss.css
+++ b/michelangelo/kss_styleguide/base-template/kss-assets/css/kss.css
@@ -513,8 +513,18 @@
 
 .styleguide_frame {
   background-color: rgba(52, 152, 219, 0.1); }
-.styleguide_frame > * {
+.styleguide_frame > *, .styleguide_frame > * > *, .styleguide_frame > * > * > * {
   background-color: rgba(52, 152, 219, 0.2);
   border: rgba(52, 152, 219, 0.5) dashed 1px; }
+
+:root {
+  --bg_texture-dark: url(../img/dark-honeycomb.png);
+  --bg_texture-light: url(../img/worn_dots.png); }
+
+.bg_texture-dark {
+  background-image: var(--bg_texture-dark, none); }
+
+.bg_texture-light {
+  background-image: var(--bg_texture-light, none); }
 
 /*# sourceMappingURL=kss.css.map */
